--- a/src/app/pages/calculations/calculations.component.html
+++ b/src/app/pages/calculations/calculations.component.html
@@ -303,7 +303,7 @@
                 <h4 class="fs-24">Calculations</h4>
                 <div class="select-box">
                   <p class="fs-14 m-0">Order by</p>
-                  <select class="form-select" aria-label="Default select example">
+                  <select class="form-select form-control">
                     <option selected>Date (Ascending)</option>
                     <option value="2">Date (Descending)</option>
                   </select>
