add calendar and complete report page

--- a/src/app/components/report-date-picker/report-date-picker.component.html
+++ b/src/app/components/report-date-picker/report-date-picker.component.html
@@ -1,4 +1,4 @@
-<form class="row row-cols-sm-auto side-bar-date-picker">
+<form class="row row-cols-sm-auto report-date-picker">
   <div class="col-12">
     <div class="dp-hidden position-absolute">
       <div class="input-group">
@@ -8,7 +8,7 @@
                #datepicker="ngbDatepicker"
                [autoClose]="'outside'"
                (dateSelect)="onDateSelection($event)"
-               [displayMonths]="1"
+               [displayMonths]="2"
                [dayTemplate]="t"
                outsideDays="hidden"
                [startDate]="fromDate!"
@@ -34,7 +34,6 @@
       <button class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button"></button>
     </div>
   </div>
-  <h5 class="fw-bold lh-lg">to</h5>
   <div class="col-12">
     <div class="input-group dp">
       <input #dpToDate
