--- a/src/app/pages/planning/planning.component.html
+++ b/src/app/pages/planning/planning.component.html
@@ -1,4 +1,20 @@
-<aside
+<div class="calendar">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12">
+        <div class="calendar-wrapper">
+          <div class="title-bar">
+            <h5 class="fs-24 m-0">Planning</h5>
+          </div>
+          <app-planning-calendar></app-planning-calendar>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div>
+  <aside
   id="navigation-sidebar"
   [ngClass]="
     hamburger
@@ -301,4 +317,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
