--- a/src/app/components/report-date-picker/report-date-picker.component.scss
+++ b/src/app/components/report-date-picker/report-date-picker.component.scss
@@ -1,41 +1,43 @@
-.side-bar-date-picker{
-  display: grid;
-  grid-template-columns: 135px 35px 135px;
-}
+.report-date-picker {
+  ::ng-deep .input-group {
+    width: 310px;
+  }
 
-.dp-hidden {
-  width: 0;
-  margin: 0;
-  border: none;
-  padding: 0;
-}
-.custom-day {
-  text-align: center;
-  padding: 0.185rem 0.25rem;
-  display: inline-block;
-  height: 2rem;
-  width: 2rem;
-}
-.custom-day.focused {
-  background-color: #e6e6e6;
-}
-.custom-day.range, .custom-day:hover {
-  background-color: rgb(2, 117, 216);
-  color: white;
-}
-.custom-day.faded {
-  background-color: rgba(2, 117, 216, 0.5);
-}
+  .dp-hidden {
+    width: 0;
+    margin: 0;
+    border: none;
+    padding: 0;
+  }
+  .custom-day {
+    text-align: center;
+    padding: 0.185rem 0.25rem;
+    display: inline-block;
+    height: 2rem;
+    width: 2rem;
+  }
+  .custom-day.focused {
+    background-color: #e6e6e6;
+  }
+  .custom-day.range, .custom-day:hover {
+    background-color: rgb(2, 117, 216);
+    color: white;
+  }
+  .custom-day.faded {
+    background-color: rgba(2, 117, 216, 0.5);
+  }
 
 
+  ::ng-deep
+    .input-group:not(.has-validation)
+    > :not(:last-child):not(.dropdown-toggle):not(.dropdown-menu),
+  .input-group:not(.has-validation) > .dropdown-toggle:nth-last-child(n + 3) {
+    font-size: 14px;
+    font-weight: 600;
+    padding: 14px;
+  }
 
-::ng-deep .input-group:not(.has-validation) > :not(:last-child):not(.dropdown-toggle):not(.dropdown-menu), .input-group:not(.has-validation) > .dropdown-toggle:nth-last-child(n+3) {
-  font-size: 14px;
-  font-weight: 600;
-  padding: 5px;
-}
-
-.input-group
+  .input-group
     > :not(:first-child):not(.dropdown-menu):not(.valid-tooltip):not(.valid-feedback):not(.invalid-tooltip):not(.invalid-feedback) {
     border: 0;
     border-color: #e8e8e8;
@@ -47,8 +49,8 @@
     bottom: 0;
     top: 0;
     background-color: transparent;
-    // padding: 20px;
-    width: 30px;
+    padding: 20px;
+    width: 40px;
     z-index: 1000;
   }
 
@@ -82,3 +84,6 @@
       }
     }
   }
+
+}
+
